@@ -1,3 +1,7 @@
+2015-11-07  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* lib/opencl_gl.rb: Added.
+
 2015-11-05  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* sample/add_numbers: Added.
